# ariel-os

examples/: laze.yml
examples/mpu6050/: Cargo.toml  laze.yml
examples/mpu6050/src/: main.rs  pins.rs
src/sensors/ariel-os-sensor-mpu6050/: Cargo.toml
src/sensors/ariel-os-sensor-mpu6050/src/: i2c.rs  lib.rs
